# symbolic-music-generation

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: eda.ipynb  text2midi_train.ipynb
