[project]
name = "symbolic-music-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.3.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pretty-midi>=0.2.11",
    "pygame>=2.6.1",
    "seaborn>=0.13.2",
]
