[project]
name = "symbolic-music-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "music21>=9.9.1",
    "pandas>=2.3.3",
    "pretty-midi>=0.2.11",
    "pygame>=2.6.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "transformers>=4.57.1",
]
